<resources>
    <string name="app_name">Yporá app</string>
    <string name="nombre_del_cliente">Nombre del cliente</string>
    <string name="cantidad_de_bidones_que_llevo_20">Bidones que llevo de 20L</string>
    <string name="cantidad_de_bidones_que_llevo_12">Bidones que llevo de 12L</string>
    <string name="cantidad_de_bidones_devueltos_20">Bidones devueltos de 20L</string>
    <string name="cantidad_de_bidones_devueltos_12">Bidones devueltos de 12L</string>
    <string name="fecha">Fecha</string>
    <string name="cantidad_de_dinero_pagado">Dinero pagado</string>
    <string name="cliente_a_buscar">Cliente a buscar</string>
    <string name="buscar">Buscar</string>
    <string name="confirmar_venta">Confirmar venta</string>
    <string name="about">Esta aplicación fue desarrollada para el proyecto final de la materia
        “Tecnologías de Programación” de la carrera Ingeniería en Sistemas de Información.</string>
    <string name="autor">Autor: Guido Chia. LU: 117.825</string>
    <string name="saldo">Saldo: </string>
    <string name="saldoDe12">Saldo de 12: </string>
    <string name="saldoDe20">Saldo de 20: </string>
    <string name="ultimaFecha">Fecha de última compra: </string>
    <string name="errorBusqueda">Se produjo un error en la búsqueda, el cliente no existe o no tiene ninguna compra</string>
    <string name="errorAgregar">Se produjo un error, debe completar todos los campos</string>
    <string name="errorEstablecer">Se produjo un error, debe establecer un precio</string>
    <string name="OK">OK</string>
    <string name="CONFIRM">CONFIRMAR</string>
    <string name="CANCEL">CANCELAR</string>

    <string name="_0">0</string>
    <string name="calcular_ingreso_bruto_mensual">Calcular ingreso bruto mensual</string>
    <string name="calcular_cantidad_total_de_bidones">Calcular total mensual de bidones</string>
    <string name="calcular_cantidad_total_de_bidones_de_20">Calcular total mensual de bidones de 20</string>
    <string name="calcular_cantidad_total_de_bidones_de_12">Calcular total mensual de bidones de 12</string>
    <string name="precio">Precio</string>
    <string name="establecer_precio">Establecer precio</string>
    <string name="elija_mes">Elija mes y año</string>
    <string name="elija_anio">Elija año</string>
    <string name="msg_agregado">Se añadio una nueva compra</string>
    <string name="msg_recorrido_creado">Se creo el recorrido de hoy</string>
    <string name="calcular_bidones_dia_12">Calcular total de bidones de 12 diarios</string>
    <string name="calcular_bidones_20_dia">Calcular total de bidones de 20 diarios</string>
    <string name="calcular_bidones_total_dia">Calcular total de bidones diarios</string>
    <string name="calcular_ingreso_dia">Calcular ingreso bruto diario</string>
    <string name="resultado">Resultado:   </string>
    <string name="confirmar_compra">¿Desea confirmar la compra?</string>
    <string name="confirmar_eliminar">¿Desea eliminar la compra?</string>
    <string name="msg_eliminado">Se ha eliminado la compra</string>
    <string name="mostrar_lista">Mostrar lista de clientes</string>
    <string name="bruto_anual">Calcular ingreso bruto anual</string>
    <string name="total_bidones_anual">Calcular total anual de bidones</string>
    <string name="bidones_total_20_anual">Calcular total anual de bidones de 20</string>
    <string name="bidones_total_12_anual">Calcular total anual de bidones de 12</string>
    <string name="comprados_de_20">Comprados de 20:</string>
    <string name="comprados_de_12">Comprados de 12:</string>
    <string name="precio_total">Precio total</string>
    <string name="descripci_n_de_la_compra">Descripción de la compra</string>
    <string name="descripcion">Descripción:</string>
    <string name="eliminar_venta">Eliminar compra</string>

    <string-array name="precios_array">
        <item>Precio de 20</item>
        <item>Precio de 12</item>
        <item>Precio de botellitas</item>
        <item>Precio de agua destilada 5 litros</item>
        <item>Precio de agua destilada 2 litros</item>
        <item>Precio de agua destilada 1 litro</item>
        <item>Precio de dispenser de mesa</item>
        <item>Precio de miel 1 kg</item>
        <item>Precio de miel 1 kg comercio</item>
        <item>Precio de miel 1/2 kg</item>
        <item>Precio de miel 1/2 kg comercio</item>
    </string-array>
</resources>
