<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="4dp"
    android:dividerPadding="16dp"
    android:gravity="fill_vertical"
    android:orientation="vertical">

    <android.support.design.button.MaterialButton
        android:id="@+id/buttonDiaCalcular"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:textAppearance="@style/ThemeOverlay.MaterialComponents.Light"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />


    <android.support.design.button.MaterialButton
        android:id="@+id/calcular_dinero_dia"
        style="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/calcular_ingreso_dia" />

    <android.support.design.button.MaterialButton
        android:id="@+id/calcular_total_bidones_dia"
        style="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular_bidones_total_dia" />

    <android.support.design.button.MaterialButton
        android:id="@+id/calcular_bidones_20_dia"
        style="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular_bidones_20_dia" />

    <android.support.design.button.MaterialButton
        android:id="@+id/calcular_bidones_12_dia"
        style="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular_bidones_dia_12" />


    <LinearLayout
        android:id="@+id/fragment_resultados_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        />
</LinearLayout>
