<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:dividerPadding="16dp"
    android:paddingLeft="4dp"
    android:gravity="fill_vertical"
    android:orientation="vertical">

    <android.support.design.button.MaterialButton
        android:id="@+id/buttonMesAño"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textAppearance="@style/ThemeOverlay.MaterialComponents.Light"
        android:textColor="@color/colorAccent"
        android:layout_gravity="center"
        android:textSize="20sp" />


    <android.support.design.button.MaterialButton
        android:id="@+id/calcular_dinero_mensual"
        style="@style/AppTheme.Button"
        android:backgroundTint="@color/colorAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular_ingreso_bruto_mensual" />

    <android.support.design.button.MaterialButton
        android:id="@+id/calcular_total_bidones"
        style="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular_cantidad_total_de_bidones" />

    <android.support.design.button.MaterialButton
        android:id="@+id/calcular_bidones_20"
        style="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular_cantidad_total_de_bidones_de_20" />

    <android.support.design.button.MaterialButton
        android:id="@+id/calcular_bidones_12"
        style="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular_cantidad_total_de_bidones_de_12" />


    <ScrollView
        android:id="@+id/fragment_resultados_mes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        />

</LinearLayout>
