<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id='@+id/fragment'
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:dividerPadding="16dp"
        android:gravity="fill_vertical"
        android:orientation="vertical"
        android:padding="10dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/InputLayoutClient"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:hapticFeedbackEnabled="true"
            android:hint="@string/nombre_del_cliente"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <android.support.v7.widget.AppCompatAutoCompleteTextView
                android:id="@+id/NombreCliente"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:capitalize="words"
                android:completionThreshold="1"
                android:drawableStart="@drawable/account_plus_outline"
                android:drawablePadding="8dp"
                android:drawableTint="@color/colorAccent"
                android:imeOptions="flagNoFullscreen|flagNoExtractUi"
                android:paddingStart="12dp"
                android:paddingTop="20dp"
                android:paddingEnd="12dp"
                android:paddingBottom="16dp"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:hapticFeedbackEnabled="true"
            android:hint="@string/cantidad_de_bidones_que_llevo_20"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/BidonesLlevoDe20"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/dice_d20"
                android:drawableTint="@color/colorAccent"
                android:imeOptions="flagNoFullscreen|flagNoExtractUi"
                android:inputType="number"
                android:text="@string/_0"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:hapticFeedbackEnabled="true"
            android:hint="@string/cantidad_de_bidones_que_llevo_12"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/BidonesLlevoDe12"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/dice_d12"
                android:imeOptions="flagNoFullscreen|flagNoExtractUi"
                android:inputType="number"
                android:text="@string/_0"
                android:textSize="20sp"
                android:drawableTint="@color/colorAccent"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:hapticFeedbackEnabled="true"
            android:hint="@string/cantidad_de_bidones_devueltos_20"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/BidonesDevueltos20"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/dice_d20"
                android:drawableTint="@android:color/holo_red_light"
                android:imeOptions="flagNoFullscreen|flagNoExtractUi"
                android:inputType="number"
                android:text="@string/_0"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:hapticFeedbackEnabled="true"
            android:hint="@string/cantidad_de_bidones_devueltos_12"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/BidonesDevueltos12"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/dice_d12"
                android:drawableTint="@android:color/holo_red_light"
                android:imeOptions="flagNoFullscreen|flagNoExtractUi"
                android:inputType="number"
                android:text="@string/_0"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:hapticFeedbackEnabled="true"
            android:hint="@string/cantidad_de_dinero_pagado"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/DineroPagado"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/currency_usd"
                android:drawableTint="@color/colorAccent"
                android:imeOptions="flagNoFullscreen|flagNoExtractUi"
                android:inputType="number"
                android:text="@string/_0"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.button.MaterialButton
            android:id='@+id/BotonFecha'
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="@string/fecha"
            android:textAppearance="@style/ThemeOverlay.MaterialComponents.Light"
            android:textColor="@color/colorAccent"
            android:textSize="20sp">

        </android.support.design.button.MaterialButton>

        <android.support.design.button.MaterialButton
            android:id='@+id/BotonConfirmar'
            style="@style/AppTheme.Button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/confirmar_venta"

            >

        </android.support.design.button.MaterialButton>


    </LinearLayout>

</ScrollView>

